--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".BakingActivityDetails" />
-        <activity android:name=".IngredientDetailsActivity"></activity>
+
+        <receiver android:name=".widgets.BakingAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/baking_app_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
